# Cloud-Native-Pipeline

interview/: OBJECTS_AND_TESTING.md  PROJECT_QA.md  README.md  pyproject.toml  requirements.txt
interview/dataflow_analytics/: analytics.py  config.py  rag.py  storage.py
interview/dataflow_analytics/api/: app.py
interview/dataflow_analytics/data/docs/: customer_support.md  data_pipeline.md  incident_response.md
interview/dataflow_analytics/data/raw/: events.jsonl
interview/dataflow_analytics/jobs/: transform_events.py
interview/dataflow_analytics/tests/: test_api.py  test_transform_events.py
retail_analytics_dbt/: dbt_project.yml
retail_analytics_dbt/macros/: usd_to_cents.sql
retail_analytics_dbt/models/Manoj/: stg_customer_mkb.sql
retail_analytics_dbt/models/marts/: dim_customers.sql  dim_products.sql  exposures.yml  fct_orders.sql  schema.yml
retail_analytics_dbt/models/staging/: _sources.yml  stg_customers.sql  stg_customers_v2.sql  stg_customers_v3.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
retail_analytics_dbt/seeds/: order_status.csv
retail_analytics_dbt/snapshots/: customer_snapshot.sql
retail_analytics_dbt/tests/: test_no_negative_order_amount.sql
