[project]
name = "dataflow-analytics"
version = "0.1.0"
description = "Cloud-native data pipeline with Spark transforms, S3 storage, and FastAPI analytics + RAG search"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DataFlow Analytics" }]

dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.29",
  "pydantic-settings>=2.2",
  "boto3>=1.34",
  "pyspark>=3.5",
  "scikit-learn>=1.3",
  "numpy>=1.24",
]

[project.optional-dependencies]
local = [
  "moto[server]>=5.0",
]

test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "moto[server]>=5.0",
]

[project.scripts]
dataflow-transform = "dataflow_analytics.jobs.transform_events:main"
dataflow-api = "dataflow_analytics.api.app:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["dataflow_analytics/tests"]
